app/assets/stylesheets/navbar.scss
.navbar {
  background-color: $white;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}

.navbar-logo {
  height: 70px;
  padding-top: 5px;
}

.navbar-search-icon-container {
  height: 40px;
  position: relative;
  width: 40px;

  .search-icon {
    cursor: pointer;
  }
}

.navbar-search-icon-oncollapse {
  display: none;
  margin-right: 0;
  padding-right: 0;
  padding-top: 5px;
  text-align: right;
}

.fa-search {
  color: $navbar-dark-grey;
  font-size: 20px;
  margin-right: 12px;
  vertical-align: middle;

  &:hover {
    color: $primary-green;
    cursor: pointer;
  }

  &.active {
    color: $secondary-green;
  }

  &:focus {
    outline: none;
  }
}

.navbar-simulator-text {
  border: 2px solid $primary-green;
  color: $navbar-dark-grey;
  font-weight: 500;
  transition: all .3s ease-in;

  &:hover {
    background: $primary-green;
    color: $white;
  }
}

.navbar-dropdown-toggle-hidden {
  .dropdown-toggle::after {
    display: none;
  }
}

.dropdown-toggle.navbar-user-dropdown {
  cursor: pointer;

  &::after {
    margin-left: 0;
    padding-left: 0;
    vertical-align: .5em;
  }
}

.dropdown-item {
  &:hover {
    background-color: $primary-green;
    color: $white;
  }
}

.navbar-text {
  color: $navbar-dark-grey;
  font-weight: 500;

  &:hover {
    color: $primary-green;
  }

  &.active {
    color: $secondary-green;
  }

  &:focus {
    outline: none;
    text-decoration: underline;
  }
}

.navbar-search-active {
  background-color: $card-green;
  display: none;
  margin-top: 0;
  padding: 20px;
  position: fixed;
  top: 96px;
  width: 100%;
  z-index: 90;
}

#navbar-dropdown-1,
#navbar-dropdown-2,
#navbar-dropdown-3 {
  &:hover {
    color: $primary-green;
  }

  &[aria-expanded="true"] {
    color: $secondary-green;
  }

  &:focus {
    outline: none;
    text-decoration: underline;
  }
}

.navbar-username-truncate {
  display: inline-block;
  max-width: 70px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.affix {
  box-shadow: 0 8px 6px -6px $shadow-grey;
}

.navbar-search-bar-form {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
}

.navbar-search-bar-input {
  border: 1px solid $primary-green;
  margin: 5px;
  min-width: 150px;
  padding: 5px;
  width: 100%;
}

.navbar-search-bar-select {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none; // to hide the default dropdown icon
  background-color: $card-green;
  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
    // svg dropdown icon
    linear-gradient(
        to bottom,
        $white 0%,
        $white 100%
      ); // background gradient color for select bar
  background-position: right .3em top 50%, 0 0; // arrow icon position (0.3em from the right, 50% vertical) , then gradient position
  background-repeat: no-repeat, repeat;
  background-size: .45em auto, 100%; // icon size, then gradient
  border: 1px solid $primary-green;
  cursor: pointer;
  font-size: 18px;
  height: 40px;
  margin-right: 6px;
  margin-top: 5px;
  max-width: 100px;
  min-width: 100px;
  padding-left: 5px;
}

.dropdown-menu {
  border: 0;
  box-shadow: 0 0 10px 1px $shadow-grey;
  top: 90%;
}

//breakpoints
@media (max-width: 991px) {
  .navbar-search-icon-oncollapse {
    display: block;
  }

  .navbar-search-icon-onexpand {
    display: none;
  }
}

@media (max-width: 768px) {
  .navbar-search-bar-form {
    width: 90%;
  }

  .navbar-search-bar-button {
    padding-left: 10px;
    padding-right: 10px;
  }

  .navbar-search-bar-select {
    width: 50px;
  }
}

@media (max-width: 400px) {
  .navbar-search-bar-form {
    width: 100%;
  }

  .navbar-search-container {
    padding-left: 0;
    padding-right: 0;
  }

  .navbar-search-active {
    padding-left: 10px;
    padding-right: 10px;
  }

  .navbar-logo {
    height: 60px;
    padding-top: 10px;
  }
}

